grammar.js
        source_file: $ => repeat($._statement),

        _statement: $ =>
            seq(
                choice(
                    $.alter_keyspace,
                    $.alter_materialized_view,
                    $.alter_role,
                    $.alter_table,
                    $.alter_type,
                    $.alter_user,
                    $.apply_batch,
                    $.create_aggregate,
                    $.create_function,
                    $.create_index,
                    $.create_keyspace,
                    $.create_materialized_view,
                    $.create_role,
                    $.create_table,
                    $.create_trigger,
                    $.create_type,
                    $.create_user,
                    $.delete_statement,
                    $.drop_aggregate,
                    $.drop_function,
                    $.drop_index,
                    $.drop_keyspace,
                    $.drop_materialized_view,
                    $.drop_role,
                    $.drop_table,
                    $.drop_trigger,
                    $.drop_type,
                    $.drop_user,
                    $.grant,
                    $.insert_statement,
                    $.list_permissions,
                    $.list_roles,
                    $.revoke,
                    $.select_statement,
                    $.truncate,
                    $.update,
                    $.use,
                ),
                optional(";"),
            ),

        constant: $ =>
            choice(
                $.decimal_literal,
                $.float_literal,
                $.hexadecimal_literal,
                $.boolean_literal,
                $.code_block,
                kw("NULL"),
                $._string_literal,
                $.uuid,
            ),
        _string_literal: $ => token(string_str),
        from_spec : $ => seq( kw("FROM"),
            dotted_name( $.object_name, $.object_name, "table" )),
        where_spec : $ => seq( kw("WHERE"), $.relation_elements),
        relation_elements : $ => prec.left(PREC.and,sep1( $.relation_element, kw("AND"))),
        relation_element : $=>
            choice (
                seq(
                    choice(
                        dotted_name( $.object_name, $.object_name, "table" ),
                        $.function_call
                    ),
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.constant,
                ),
                seq(
                    $.function_call,
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.function_call,
                ),
                seq(
                    $.object_name,
                    kw("IN"),
                    "(",
                     $.function_args,
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    kw("IN"),
                    "(",
                    commaSep1($.assignment_tuple),
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    commaSep1($.assignment_tuple),
                ),
                $.relation_contains_key,
                $.relation_contains,
            ),
        delete_statement : $ =>
            seq(
                optional( $.begin_batch ),
                kw("DELETE"),
                optional( $.delete_column_list ),
                $.from_spec,
                optional( $.using_timestamp_spec),
                $.where_spec,
                optional( choice( if_exists, $.if_spec))
            ),
        begin_batch : $ =>
            seq(
                kw("BEGIN"),
                optional( choice( kw("LOGGED"), kw("UNLOGGED"))),
                kw( "BATCH"),
                optional( $.using_timestamp_spec),
            ),
        delete_column_list : $ => seq( $.delete_column_item, repeat( seq( ",", $.delete_column_item))),
        delete_column_item : $ =>
            seq(
                $.object_name,
                optional(
                    seq(
                        "[",
                        choice( $._string_literal, $.decimal_literal),
                        "]"
                    )
                ),
            ),
        using_timestamp_spec : $ => seq( kw("USING"), $.timestamp ),
        if_spec : $ => seq( kw( "IF"), $.if_condition_list),
        create_index : $ =>
            seq(
                kw( "CREATE"),
                kw("INDEX"),
                optional( if_not_exists ),
                optional( $.index_name ),
                kw( "ON"),
                $.table_name,
                "(",
                $.index_column_spec,
                ")",
            ),
        table_name : $ => dotted_name( $.object_name, $.object_name, "table"),
        index_column_spec : $ => choice( alias($.object_name, "column"), $.index_keys_spec, $.index_entries_s_spec, $.index_full_spec),
        index_keys_spec : $ => seq( kw("KEYS"), "(", alias( $.object_name, "keys"), ")"),
        index_entries_s_spec : $ => seq( kw( "ENTRIES"), "(", alias( $.object_name, "entries"), ")"),
        index_full_spec : $ => seq( kw( "FULL"), "(", alias( $.object_name, "full"), ")"),
        create_keyspace : $ =>
            seq(
                kw("CREATE"),
                kw( "KEYSPACE"),
                optional( if_not_exists ),
                alias( $.object_name, "keyspace" ),
                kw( "WITH"),
                kw( "REPLICATION"),
                ">",
                "{",
                $.replication_list,
                "}",
                optional( seq( kw("AND"), $.durable_writes)),
            ),
        replication_list_item : $ =>
            choice(
                seq( $._string_literal, ":", $._string_literal),
                seq( $._string_literal, ":", $.decimal_literal),
            ),
        durable_writes : $ =>
            seq(
                kw("DURABLE_WRITES"),
                "=",
                $.boolean_literal,
            ),
        create_trigger : $ =>
            seq(
                kw("CREATE"),
                kw( "TRIGGER"),
                optional( if_not_exists ),
                $.trigger_name,
                kw( "USING"),
                $.trigger_class,
            ),
        trigger_class : $ => $._string_literal,
        replication_list : $ => commaSep1( $.replication_list_item ),
        alter_user : $ =>
            seq(
                kw("ALTER"),
                kw( "USER"),
                $.user,
                kw("WITH"),
                $.user_password,
                optional( $.user_super_user ),
            ),
        user_password : $ => seq( kw("PASSWORD"), $._string_literal),
