test/corpus/alterUser.cql
================================================================================
ALTER USER moss WITH PASSWORD 'bestReceiver';
================================================================================
ALTER USER moss WITH PASSWORD 'bestReceiver';
--------------------------------------------------------------------------------

(source_file
  (alter_user
    (user)
    (user_password
      (string_literal))))
